--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
 *{
-	margin: 0 auto;
+	margin: 0;
 	padding: 0;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 }
 
 /* navbar */
-
 .navbar-default{
+	width: 100%;
+	height: 70px;
+	margin: 0 auto;
 	background:transparent;
 	background-image:none;
 	border-color:transparent;
-	margin: 10px 50px;
 }
 
 .logo{
@@ -19,13 +20,17 @@
 	margin-left: 20px;
 	margin-top: 10px;
 }
+.navbar-right{
+	margin-right: 40px;
+}
 
 .navbar-default .navbar-nav li a {
+	margin-top: 10px;
     color: white;
 }
 
 .cambiaNav{
-    background-color: #4C4C4C;
+    background-color: #222222;
 }
 
 .cambiaNav a{
@@ -46,7 +51,7 @@ header{
 }
 
 header img{
-	margin-top: 200px;
+	margin-top: 150px;
 }
 
 .fa-chevron-down{
@@ -58,21 +63,18 @@ header img{
 	border-radius: 100%;
 }
 
-/* section our value*/
-.values{
-	padding: 100px 0;
-}
+/* section our values*/
 
-.top h2{
+.val h1{
 	font-size: 50px;
 	font-weight: 800;
-	margin: 0;
+	margin-top: 50px;
 }
 
-.top h4{
-	font-size: 30px;
+.val h4{
+	font-size: 25px;
 	font-weight: 800;
-	margin: 0;
+	margin-right: -10px;
 }
 
 .icon{
@@ -84,7 +86,7 @@ header img{
     height: 80px;
 }
 
-.values-info-section{
+.info-section{
 	margin-top: 20px;
 }
 
@@ -101,16 +103,51 @@ header img{
 }
 
 .lines{
-	padding: 15px 0px;
+	border-color: #C2B49A;
 }
 
-.first-line,
-.second-line{
-	border-bottom: 1px solid ##BCA573;
-	width: 150px;
+.info-section{
+	margin-top: 20px;
 }
 
-.second-line{
-	margin-top: 3px;
+/* Section meet */
+
+.meet{
+	background-image: url('../img/bg-quote.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	color: #fff;
 }
 
+.title-meet {
+    color: white;
+    margin-top: 200px;
+    text-align: center;
+    font-size: 35px;
+}
+
+.btn-meet {
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 0;
+    height: 50px;
+    width: 180px;
+}
+
+.title-btn {
+    font-weight: bold
+}
+
+.btn-meet:hover{
+	background-color: transparent;
+    border: 1px solid #8E8E8E;
+    border-radius: 0;
+    height: 50px;
+    width: 180px;
+}
+
+.title-btn:hover{
+	font-weight: bold;
+	color: #8E8E8E;
+}
